tests/toylang/neg/000353_mutation.toylang
program a = { a = (a else); } .
